sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var cpt=0
  for(i <- 0 to getNombreValeurs()-1){
      if (plusPetit(i,i+1)==false){
      	echange(i,i+1)
        cpt=1
    	}else{
    }
    }
    if (cpt==0){
      return
    }
  }
}